--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   build_runner: ^2.0.3
   cupertino_icons: ^1.0.2
   dartz: ^0.10.0-nullsafety.2
+  flutter_bloc: ^7.0.0
   freezed: ^0.14.2
   freezed_annotation: ^0.14.2
 
