added firebase to flutter and prepared Android to run with Firebase.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,9 +26,12 @@ dependencies:
   build_runner: ^2.0.3
   cupertino_icons: ^1.0.2
   dartz: ^0.10.0-nullsafety.2
+  firebase_auth: ^1.1.4
+  firebase_core: ^1.1.1
   flutter_bloc: ^7.0.0
   freezed: ^0.14.2
   freezed_annotation: ^0.14.2
+  google_sign_in: ^5.0.3
 
 dev_dependencies:
   flutter_test:
