--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,11 @@ dependencies:
   flutter_bloc: ^7.0.0
   freezed: ^0.14.2
   freezed_annotation: ^0.14.2
+  get_it: ^7.1.3
   google_sign_in: ^5.0.3
+  injectable: ^1.4.0
+  injectable_generator: ^1.4.0
+  lint: ^1.5.3
 
 dev_dependencies:
   flutter_test:
