--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  another_flushbar: ^1.10.22
   build_runner: ^2.0.3
   cupertino_icons: ^1.0.2
   dartz: ^0.10.0-nullsafety.2
