Implemented functionality for checking if user is signed-in.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   injectable: ^1.4.0
   injectable_generator: ^1.4.0
   lint: ^1.5.3
+  uuid: ^3.0.4
 
 dev_dependencies:
   flutter_test:
