Implemented authentication bloc.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,24 +24,26 @@ dependencies:
   flutter:
     sdk: flutter
   another_flushbar: ^1.10.22
+  auto_route: ^2.2.0
   build_runner: ^2.0.3
   cupertino_icons: ^1.0.2
   dartz: ^0.10.0-nullsafety.2
   firebase_auth: ^1.1.4
   firebase_core: ^1.1.1
   flutter_bloc: ^7.0.0
-  freezed: ^0.14.2
   freezed_annotation: ^0.14.2
   get_it: ^7.1.3
   google_sign_in: ^5.0.3
   injectable: ^1.4.0
-  injectable_generator: ^1.4.0
-  lint: ^1.5.3
   uuid: ^3.0.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  freezed: ^0.14.2
+  lint: ^1.5.3
+  injectable_generator: ^1.4.0
+  auto_route_generator: ^2.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
