--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,15 +35,16 @@ dependencies:
   get_it: ^7.1.3
   google_sign_in: ^5.0.3
   injectable: ^1.4.0
+  kt_dart: ^0.9.0
   uuid: ^3.0.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  freezed: ^0.14.2
-  lint: ^1.5.3
-  injectable_generator: ^1.4.0
   auto_route_generator: ^2.1.0
+  freezed: ^0.14.2
+  injectable_generator: ^1.4.0
+  lint: ^1.5.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
