--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   another_flushbar: ^1.10.22
   auto_route: ^2.2.0
   build_runner: ^2.0.3
+  cloud_firestore: ^2.1.0
   cupertino_icons: ^1.0.2
   dartz: ^0.10.0-nullsafety.2
   firebase_auth: ^1.1.4
@@ -35,6 +36,8 @@ dependencies:
   get_it: ^7.1.3
   google_sign_in: ^5.0.3
   injectable: ^1.4.0
+  json_annotation: ^4.0.1
+  json_serializable: ^4.1.2
   kt_dart: ^0.9.0
   uuid: ^3.0.4
 
