--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,22 +23,23 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  another_flushbar: ^1.10.22
+  another_flushbar: ^1.10.24
   auto_route: ^2.2.0
-  build_runner: ^2.0.3
-  cloud_firestore: ^2.1.0
-  cupertino_icons: ^1.0.2
+  build_runner: ^2.0.6
+  cloud_firestore: ^2.3.0
+  cupertino_icons: ^1.0.3
   dartz: ^0.10.0-nullsafety.2
-  firebase_auth: ^1.1.4
-  firebase_core: ^1.1.1
-  flutter_bloc: ^7.0.0
+  firebase_auth: ^2.0.0
+  firebase_core: ^1.3.0
+  flutter_bloc: ^7.0.1
+  flutter_hooks: ^0.18.0
   freezed_annotation: ^0.14.2
   get_it: ^7.1.3
-  google_sign_in: ^5.0.3
-  injectable: ^1.4.0
+  google_sign_in: ^5.0.4
+  injectable: ^1.4.1
   json_annotation: ^4.0.1
-  json_serializable: ^4.1.2
-  kt_dart: ^0.9.0
+  json_serializable: ^4.1.3
+  kt_dart: ^0.9.1
   uuid: ^3.0.4
 
 dev_dependencies:
@@ -46,7 +47,7 @@ dev_dependencies:
     sdk: flutter
   auto_route_generator: ^2.1.0
   freezed: ^0.14.2
-  injectable_generator: ^1.4.0
+  injectable_generator: ^1.4.1
   lint: ^1.5.3
 
 # For information on the generic Dart part of this file, see the
