--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,9 +33,11 @@ dependencies:
   firebase_core: ^1.3.0
   flutter_bloc: ^7.0.1
   flutter_hooks: ^0.18.0
+  flutter_slidable: ^0.6.0
   freezed_annotation: ^0.14.2
   get_it: ^7.1.3
   google_sign_in: ^5.0.4
+  implicitly_animated_reorderable_list: ^0.4.0
   injectable: ^1.4.1
   json_annotation: ^4.0.1
   json_serializable: ^4.1.3
